[gd_scene load_steps=10 format=3 uid="uid://rumvotveqal5"]

[ext_resource type="Script" uid="uid://dodm85vhrwagf" path="res://src/common/globals.gd" id="1_noqpm"]
[ext_resource type="AudioStream" uid="uid://clp3gm23xglf2" path="res://assets/music/GameMusic01 LOOP.ogg" id="3_0o1u7"]
[ext_resource type="Script" uid="uid://c3gbbvoifoygf" path="res://src/common/music_manager.gd" id="3_h14hn"]
[ext_resource type="AudioStream" uid="uid://dny0fqmjsgl8p" path="res://assets/music/MainMenu.ogg" id="4_0o1u7"]
[ext_resource type="Script" uid="uid://04681mljvxoh" path="res://src/common/ui_sfx.gd" id="5_fmvy8"]
[ext_resource type="AudioStream" uid="uid://vdr7ewrp5m01" path="res://assets/sfx/kenneys/select_001.ogg" id="5_kyxtr"]
[ext_resource type="AudioStream" uid="uid://dcowjg8y0gyjd" path="res://assets/sfx/kenneys/select_002.ogg" id="6_7sypx"]
[ext_resource type="PackedScene" uid="uid://dv04tvpd5gpyu" path="res://src/systems/character_generator/character_generator.tscn" id="8_0o1u7"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_q1nu8"]
stream_count = 1
stream_0/stream = ExtResource("3_0o1u7")
stream_0/volume = 0.0

[node name="Globals" type="Node"]
process_mode = 3
script = ExtResource("1_noqpm")
religion_names = Array[String](["The Path of the Cosmic Snail", "The Fellowship of the Laughing Star", "The Order of the Eternal Tea", "The Luminara Sect"])

[node name="MusicManager" type="Node" parent="."]
script = ExtResource("3_h14hn")

[node name="game_music" type="AudioStreamPlayer" parent="MusicManager"]
process_mode = 3
stream = SubResource("AudioStreamSynchronized_q1nu8")
bus = &"Music"

[node name="menu_music" type="AudioStreamPlayer" parent="MusicManager"]
process_mode = 3
stream = ExtResource("4_0o1u7")
bus = &"Music"

[node name="UiSfx" type="Node" parent="."]
script = ExtResource("5_fmvy8")
button_press_auto_connect = false
button_hover_auto_connect = false

[node name="click_sfx" type="AudioStreamPlayer" parent="UiSfx"]
process_mode = 3
stream = ExtResource("6_7sypx")
bus = &"Sfx"

[node name="hover_sfx" type="AudioStreamPlayer" parent="UiSfx"]
process_mode = 3
stream = ExtResource("5_kyxtr")
bus = &"Sfx"

[node name="CharacterGenerator" parent="." instance=ExtResource("8_0o1u7")]
